# guilds-of-heroes

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
api/: app.py
api/blueprints/: auth_bp.py  campaigns_bp.py  characters_bp.py  dice_bp.py  events_bp.py  follows_bp.py  health_bp.py  notifications_bp.py  posts_bp.py  session_logs_bp.py  users_bp.py
api/middleware/: auth.py  correlation_id.py  error_handler.py  request_timing.py
cli/: auth_commands.py  campaign_commands.py  character_commands.py  db_commands.py  dice_commands.py  event_commands.py  follow_commands.py  health_commands.py  main.py  notification_commands.py  post_commands.py  session_log_commands.py  user_commands.py
config/: settings.py
deployment/nginx/: goh.nlibera.com.conf
deployment/scripts/: backup.sh  deploy.sh  setup_server.sh
deployment/systemd/: goh-api.service
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
goh/db/: connection.py
goh/domain/: exceptions.py
goh/observability/: correlation.py  logging.py  metrics.py  timing.py
goh/repositories/: audit_repo.py  campaign_repo.py  character_repo.py  dice_repo.py  event_repo.py  follow_repo.py  magic_link_repo.py  notification_repo.py  post_repo.py  session_repo.py  user_repo.py
goh/services/: archive_service.py  auth_service.py  campaign_service.py  character_service.py  dice_service.py  event_service.py  follow_service.py  health_service.py  notification_service.py  post_service.py  session_log_service.py  user_service.py
tests/: conftest.py
tests/api/: test_api.py
(+49 files in other folders)
